MAPREDUCE-1295. Add a tool in Rumen for folding and manipulating job traces. Contributed by Dick King
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@897072 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -100,6 +100,9 @@ Trunk (unreleased changes)
     MAPREDUCE-372. Change org.apache.hadoop.mapred.lib.ChainMapper/Reducer 
     to use new mapreduce api. (Amareshwari Sriramadasu via sharad)
 
+    MAPREDUCE-1295. Add a tool in Rumen for folding and manipulating job
+    traces. (Dick King via cdouglas)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
