AVRO-1126. Shuffle now uses Serialization API for comparisons, permitting non-Writable intermediate data.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@898019 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -103,6 +103,10 @@ Trunk (unreleased changes)
     MAPREDUCE-1295. Add a tool in Rumen for folding and manipulating job
     traces. (Dick King via cdouglas)
 
+    MAPREDUCE-1126. Shuffle now uses Serialization API for
+    comparisons, permitting non-Writable intermediate data.
+    (Aaron Kimball via cutting)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
