--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -107,6 +107,10 @@ Trunk (unreleased changes)
     comparisons, permitting non-Writable intermediate data.
     (Aaron Kimball via cutting)
 
+    MAPREDUCE-1302. TrackerDistributedCacheManager deletes file
+    asynchronously, thus reducing task initialization delays.
+    (Zheng Shao via dhruba)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
