--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1122,3 +1122,6 @@ Release 0.21.0 - Unreleased
     MAPREDUCE-1009. Update forrest documentation describing hierarchical
     queues. (Vinod Kumar Vavilapalli via yhemanth)
 
+    MAPREDUCE-1342. Fixed deadlock in global blacklisting of tasktrackers.
+    (Amareshwari Sriramadasu via acmurthy)
+
