--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -110,6 +110,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1218. TaskTrackers send cpu and memory usage of
     node to JobTracker. (Scott Chen via dhruba)
 
+    MAPREDUCE-847. Fix Releaseaudit warning count to zero
+    (Giridharan Kesavan)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
