MAPREDUCE-1316. Fixes a memory leak of TaskInProgress instances in the jobtracker. Contributed by Amar Kamat.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@900815 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1127,3 +1127,6 @@ Release 0.21.0 - Unreleased
     MAPREDUCE-1342. Fixed deadlock in global blacklisting of tasktrackers.
     (Amareshwari Sriramadasu via acmurthy)
 
+    MAPREDUCE-1316. Fixes a memory leak of TaskInProgress instances in
+    the jobtracker. (Amar Kamat via yhemanth)
+
