MAPREDUCE-1359. TypedBytes TestIO doesn't mkdir its test dir first. Contributed by Anatoli Fomenko
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@901349 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -230,6 +230,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1212. Mapreduce contrib project ivy dependencies are not included
     in binary target. (Aaron Kimball via tomwhite)
 
+    MAPREDUCE-1359. TypedBytes TestIO doesn't mkdir its test dir first.
+    (Anatoli Fomenko via cos)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
