MAPREDUCE-1313. Fix NPE in Sqoop when table with null fields uses escape during import. Contributed by Aaron Kimball
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@902674 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -241,6 +241,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1388. Move the HDFS RAID package from HDFS to MAPREDUCE.
     (Eli Collins via dhruba)
 
+    MAPREDUCE-1313. Fix NPE in Sqoop when table with null fields uses escape
+    during import. (Aaron Kimball via cdouglas)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
