MAPREDUCE-1314. Correct errant mapreduce.x.mapreduce.x replacements from bulk change. Contributed by Amareshwari Sriramadasu
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@902701 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1150,3 +1150,5 @@ Release 0.21.0 - Unreleased
     MAPREDUCE-1359. TypedBytes TestIO doesn't mkdir its test dir first.
     (Anatoli Fomenko via cos)
 
+    MAPREDUCE-1314. Correct errant mapreduce.x.mapreduce.x replacements from
+    bulk change. (Amareshwari Sriramadasu via cdouglas)
