--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1152,3 +1152,6 @@ Release 0.21.0 - Unreleased
 
     MAPREDUCE-1314. Correct errant mapreduce.x.mapreduce.x replacements from
     bulk change. (Amareshwari Sriramadasu via cdouglas)
+
+    MAPREDUCE-1365. Restore accidentally renamed test in
+    TestTaskTrackerBloacklisting. (Amareshwari Sriramadasu via cdouglas)
