MAPREDUCE-1287. Only call the partitioner with more than one reducer.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@902704 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,9 @@ Trunk (unreleased changes)
 
   INCOMPATIBLE CHANGES
 
+    MAPREDUCE-1287. Only call the partitioner with more than one reducer.
+    (cdouglas)
+
   NEW FEATURES
 
     MAPREDUCE-698. Per-pool task limits for the fair scheduler.
