MAPREDUCE-1406. Fix spelling of JobContext.MAP_COMBINE_MIN_SPILLS.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@902709 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1161,3 +1161,6 @@ Release 0.21.0 - Unreleased
 
     MAPREDUCE-1365. Restore accidentally renamed test in
     TestTaskTrackerBloacklisting. (Amareshwari Sriramadasu via cdouglas)
+
+    MAPREDUCE-1406. Fix spelling of JobContext.MAP_COMBINE_MIN_SPILLS.
+    (cdouglas)
