MAPREDUCE-1337. Use generics in StreamJob to improve readability of that class. Contributed by Kay Kay
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@902717 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -124,6 +124,9 @@ Trunk (unreleased changes)
     MAPREDUCE-847. Fix Releaseaudit warning count to zero
     (Giridharan Kesavan)
 
+    MAPREDUCE-1337. Use generics in StreamJob to improve readability of that
+    class. (Kay Kay via cdouglas)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
