MAPREDUCE-361. Port terasort example to the new mapreduce API. Contributed by Amareshwari Sriramadasu
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@902727 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -127,6 +127,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1337. Use generics in StreamJob to improve readability of that
     class. (Kay Kay via cdouglas)
 
+    MAPREDUCE-361. Port terasort example to the new mapreduce API. (Amareshwari
+    Sriramadasu via cdouglas)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
