MAPREDUCE-1394. Sqoop generates incorrect URIs in paths sent to Hive. Contributed by Aaron Kimball.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@903508 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -256,6 +256,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1327. Fix Sqoop handling of Oracle timezone with timestamp data
     types in import. (Leonid Furman via cdouglas)
 
+    MAPREDUCE-1394. Sqoop generates incorrect URIs in paths sent to Hive.
+    (Aaron Kimball via tomwhite)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
