MAPREDUCE-1395. Sqoop does not check return value of Job.waitForCompletion(). Contributed by Aaron Kimball.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@903543 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -259,6 +259,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1394. Sqoop generates incorrect URIs in paths sent to Hive.
     (Aaron Kimball via tomwhite)
 
+    MAPREDUCE-1395. Sqoop does not check return value of Job.waitForCompletion().
+    (Aaron Kimball via tomwhite)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
