--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -130,6 +130,9 @@ Trunk (unreleased changes)
     MAPREDUCE-361. Port terasort example to the new mapreduce API. (Amareshwari
     Sriramadasu via cdouglas)
 
+    MAPREDUCE-1356. Allow user-specified hive table name in sqoop.
+    (Aaron Kimball via tomwhite)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
