MAPREDUCE-1385. Use the new UserGroupInformation from HADOOP-6299. (ddas via omalley)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@903563 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -7,6 +7,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1287. Only call the partitioner with more than one reducer.
     (cdouglas)
 
+    MAPREDUCE-1385. Use the new UserGroupInformation from HADOOP-6299.
+    (ddas via omalley)
+
   NEW FEATURES
 
     MAPREDUCE-698. Per-pool task limits for the fair scheduler.
