MAPREDUCE-1369. JUnit tests should never depend on anything in conf. Contributed by Anatoli Fomenko.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@904397 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1182,3 +1182,6 @@ Release 0.21.0 - Unreleased
 
     MAPREDUCE-1406. Fix spelling of JobContext.MAP_COMBINE_MIN_SPILLS.
     (cdouglas)
+
+    MAPREDUCE-1369. JUnit tests should never depend on anything in conf
+    (Anatoli Fomenko via cos)
