MAPREDUCE-1322. Defines default value for staging directory to be user based fixing a failing streaming test. Contributed by Devaraj Das and Amareshwari Sriramadasu.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@904491 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -268,6 +268,10 @@ Trunk (unreleased changes)
     MAPREDUCE-1395. Sqoop does not check return value of Job.waitForCompletion().
     (Aaron Kimball via tomwhite)
 
+    MAPREDUCE-1322. Defines default value for staging directory to be user
+    based fixing a failing streaming test.
+    (Devaraj Das and Amareshwari Sriramadasu via yhemanth)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
