MAPREDUCE-1367. LocalJobRunner should support parallel mapper execution. Contributed by Aaron Kimball.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@904706 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -142,6 +142,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1356. Allow user-specified hive table name in sqoop.
     (Aaron Kimball via tomwhite)
 
+    MAPREDUCE-1367. LocalJobRunner should support parallel mapper execution.
+    (Aaron Kimball via tomwhite)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
