MAPREDUCE-1412. Fix timer granularity issue causing failures in TestTaskTrackerBlacklisting.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@904717 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1198,3 +1198,6 @@ Release 0.21.0 - Unreleased
 
     MAPREDUCE-1369. JUnit tests should never depend on anything in conf
     (Anatoli Fomenko via cos)
+
+    MAPREDUCE-1412. Fix timer granularity issue causing failures in
+    TestTaskTrackerBlacklisting. (cdouglas)
