--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -42,6 +42,10 @@ Trunk (unreleased changes)
     implements offline erasure-coding.  It can be used to reduce the 
     total storage requirements of HDFS.  (dhruba)
 
+    MAPREDUCE-1432. Adds hooks in the jobtracker and tasktracker 
+    for loading the tokens in the user's ugi. This is required
+    for the copying of files from the hdfs. (ddas)
+
   IMPROVEMENTS
 
     MAPREDUCE-1198. Alternatively schedule different types of tasks in
