MAPREDUCE-899. Modified LinuxTaskController to check that task-controller has right permissions and ownership before performing any actions. Contributed by Amareshwari Sriramadasu.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@905008 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -285,6 +285,10 @@ Trunk (unreleased changes)
     based fixing a failing streaming test.
     (Devaraj Das and Amareshwari Sriramadasu via yhemanth)
 
+    MAPREDUCE-899. Modified LinuxTaskController to check that task-controller
+    has right permissions and ownership before performing any actions.
+    (Amareshwari Sriramadasu via yhemanth)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
