MAPREDUCE-1335. Adds SASL Kerberos/Digest authentication in MapReduce. Contributed by Kan Zhang.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@905875 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -46,6 +46,9 @@ Trunk (unreleased changes)
     for loading the tokens in the user's ugi. This is required
     for the copying of files from the hdfs. (ddas)
 
+    MAPREDUCE-1335. Adds SASL Kerberos/Digest authentication in MapReduce.
+    (Kan Zhang via ddas)
+
   IMPROVEMENTS
 
     MAPREDUCE-1198. Alternatively schedule different types of tasks in
