MAPREDUCE-1443. DBInputFormat can leak connections. Contributed by Aaron Kimball.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@906228 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -292,6 +292,9 @@ Trunk (unreleased changes)
     has right permissions and ownership before performing any actions.
     (Amareshwari Sriramadasu via yhemanth)
 
+    MAPREDUCE-1443. DBInputFormat can leak connections.
+    (Aaron Kimball via tomwhite)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
