MAPREDUCE-64. Eliminate io.sort.record.percent from MapTask configuration.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@906820 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -152,6 +152,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1367. LocalJobRunner should support parallel mapper execution.
     (Aaron Kimball via tomwhite)
 
+    MAPREDUCE-64. Eliminate io.sort.record.percent from MapTask configuration.
+    (cdouglas)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
