MAPREDUCE-1440. Replace the long user name in MapReduce with the local name. (omalley)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@907116 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -155,6 +155,9 @@ Trunk (unreleased changes)
     MAPREDUCE-64. Eliminate io.sort.record.percent from MapTask configuration.
     (cdouglas)
 
+    MAPREDUCE-1440. Replace the long user name in MapReduce with the local
+    name. (omalley)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
