MAPREDUCE-1464. Makes a compatible change in JobTokenIdentifier to account for HADOOP-6510. Contributed by Jitendra Nath Pandey.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@907551 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -49,6 +49,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1335. Adds SASL Kerberos/Digest authentication in MapReduce.
     (Kan Zhang via ddas)
 
+    MAPREDUCE-1464. Makes a compatible change in JobTokenIdentifier to
+    account for HADOOP-6510. (Jitendra Nath Pandey via ddas)
+
   IMPROVEMENTS
 
     MAPREDUCE-1198. Alternatively schedule different types of tasks in
