--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1229,3 +1229,6 @@ Release 0.21.0 - Unreleased
 
     MAPREDUCE-1412. Fix timer granularity issue causing failures in
     TestTaskTrackerBlacklisting. (cdouglas)
+
+    MAPREDUCE-1448. Respect --config option in Mumak script. (Hong Tang via
+    cdouglas)
