MAPREDUCE-1470. Move delegation tokens from HDFS to Common so that MapReduce can use them too. (omalley)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@907967 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -161,6 +161,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1440. Replace the long user name in MapReduce with the local
     name. (omalley)
 
+    MAPREDUCE-1470. Move delegation tokens from HDFS to Common so that 
+    MapReduce can use them too. (omalley)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
