MAPREDUCE-1433. Add a delegation token for MapReduce. (omalley)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@908271 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -52,6 +52,8 @@ Trunk (unreleased changes)
     MAPREDUCE-1464. Makes a compatible change in JobTokenIdentifier to
     account for HADOOP-6510. (Jitendra Nath Pandey via ddas)
 
+    MAPREDUCE-1433. Add a delegation token for MapReduce. (omalley)
+
   IMPROVEMENTS
 
     MAPREDUCE-1198. Alternatively schedule different types of tasks in
