MAPREDUCE-1469. Sqoop should disable speculative execution in export. Contributed by Aaron Kimball.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@909239 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -322,6 +322,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1399. The archive command shows a null error message (nicholas
     via mahadev)
 
+    MAPREDUCE-1469. Sqoop should disable speculative execution in export.
+    (Aaron Kimball via tomwhite)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
