MAPREDUCE-1467. Add a --verbose flag to Sqoop. Contributed by Aaron Kimball.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@909241 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -185,6 +185,9 @@ Trunk (unreleased changes)
     only on required set of localized paths.
     (Amareshwari Sriramadasu via yhemanth)
 
+    MAPREDUCE-1467. Add a --verbose flag to Sqoop.
+    (Aaron Kimball via tomwhite)
+
   BUG FIXES
 
     MAPREDUCE-1258. Fix fair scheduler event log not logging job info.
