MAPREDUCE-1305. Improve efficiency of distcp -delete. Contributed by Peter Romianowski
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@909783 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -326,6 +326,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1469. Sqoop should disable speculative execution in export.
     (Aaron Kimball via tomwhite)
 
+    MAPREDUCE-1305. Improve efficiency of distcp -delete. (Peter Romianowski
+    via cdouglas)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
