--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -329,6 +329,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1305. Improve efficiency of distcp -delete. (Peter Romianowski
     via cdouglas)
 
+    MAPREDUCE-1474. Update forrest documentation for Hadoop Archives. (Mahadev
+    Konar via cdouglas)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
