--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -332,6 +332,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1474. Update forrest documentation for Hadoop Archives. (Mahadev
     Konar via cdouglas)
 
+    MAPREDUCE-1400. Use tr rather than sed to effect literal substitution in
+    the build script. (Allen Wittenauer via cdouglas)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
