--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -338,6 +338,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1400. Use tr rather than sed to effect literal substitution in
     the build script. (Allen Wittenauer via cdouglas)
 
+    MAPREDUCE-1358. Avoid false positives in OutputLogFilter. (Todd Lipcon via
+    cdouglas)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
