MAPREDUCE-1490. Fix a NPE that could occur during instantiation and initialization of the DistributedRaidFileSystem. (Rodrigo Schmidt via dhruba)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@909993 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -341,6 +341,12 @@ Trunk (unreleased changes)
     MAPREDUCE-1358. Avoid false positives in OutputLogFilter. (Todd Lipcon via
     cdouglas)
 
+    MAPREDUCE-1490. Fix a NullPointerException that could occur during 
+    instantiation and initialization of the DistributedRaidFileSystem. 
+    (Rodrigo Schmidt via dhruba)
+
+    cdouglas)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
