MAPREDUCE-1444. Sqoop ConnManager instances can leak Statement objects. Contributed by Aaron Kimball.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@910763 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -354,6 +354,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1398. Fix TaskLauncher to stop waiting for slots on a TIP that
     is killed / failed.
     (Amareshwari Sriramadasu via yhemanth)
+
+    MAPREDUCE-1444. Sqoop ConnManager instances can leak Statement objects.
+    (Aaron Kimball via tomwhite)
  
 Release 0.21.0 - Unreleased
 
