--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -174,6 +174,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1441. Trim whitespace from directory lists pulled from the
     configuration. (Todd Lipcon via cdouglas)
 
+    MAPREDUCE-1445. Refactor Sqoop tests to support better ConnManager testing.
+    (Aaron Kimball via tomwhite)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
