MAPREDUCE-1503. Delegation token renewing and cancelling should provide meaningful exceptions when there are failures instead of returning false. (omalley)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@911745 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -180,6 +180,10 @@ Trunk (unreleased changes)
     MAPREDUCE-1309. Refactor Rumen trace generator to improve code structure
     and add extensible support for log formats. (Dick King via cdouglas)
 
+    MAPREDUCE-1503. Delegation token renewing and cancelling should provide
+    meaningful exceptions when there are failures instead of returning 
+    false. (omalley)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
