MAPREDUCE-1430. JobTracker automatically renews delegation tokens for jobs. Contributed by Boris Shkolnik.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@912471 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -60,6 +60,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1307. Introduces the Job level ACLs feature. 
     (Vinod Kumar Vavilapalli via ddas)
 
+    MAPREDUCE-1430. JobTracker automatically renews delegation tokens for jobs.
+    (Boris Shkolnik via ddas)
+
   IMPROVEMENTS
 
     MAPREDUCE-1198. Alternatively schedule different types of tasks in
