MAPREDUCE-1519. RaidNode fails to create new parity file if an older parity file already exists. (Rodrigo Schmidt via dhruba)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@915223 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -378,6 +378,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1378. URL encode link in jobhistory.jsp to avoid errors caused by
     unescaped characters. (E. Sammer via cdouglas)
 
+    MAPREDUCE-1519. RaidNode fails to create new parity file 
+    if an older version already exists. (Rodrigo Schmidt via dhruba)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
