HADOOP-6579. Upgrade commons-codec library to 1.4. (omalley)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@916293 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -190,6 +190,8 @@ Trunk (unreleased changes)
     meaningful exceptions when there are failures instead of returning 
     false. (omalley)
 
+    HADOOP-6579. Upgrade commons-codec library to 1.4. (omalley)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
