MAPREDUCE-1537. Fixes a compilation problem in a testcase after commit of HDFS-984. Contributed by Jitendra Nath Pandey.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@916578 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -383,6 +383,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1519. RaidNode fails to create new parity file 
     if an older version already exists. (Rodrigo Schmidt via dhruba)
 
+    MAPREDUCE-1537. Fixes a compilation problem in a testcase after commit
+    HDFS-984. (Jitendra Nath Pandey via ddas)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
