--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -386,6 +386,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1537. Fixes a compilation problem in a testcase after commit
     HDFS-984. (Jitendra Nath Pandey via ddas)
 
+    MAPREDUCE-1537. The patch makes the job client call the getDelegationToken
+    only when security is enabled. (Jitendra Nath Pandey via ddas)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
