MAPREDUCE-1455. Authorization for servlets. Contributed by Ravi Gummadi.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@918037 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -63,6 +63,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1430. JobTracker automatically renews delegation tokens for jobs.
     (Boris Shkolnik via ddas)
 
+    MAPREDUCE-1455. Introduces job-level authorization for mapreduce servlets.
+    (Ravi Gummadi via vinodkv)
+
   IMPROVEMENTS
 
     MAPREDUCE-1198. Alternatively schedule different types of tasks in
