MAPREDUCE-1510. RAID should regenerate parity files if they get deleted. (Rodrigo Schmidt via dhruba)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@918206 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -392,6 +392,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1537. The patch makes the job client call the getDelegationToken
     only when security is enabled. (Jitendra Nath Pandey via ddas)
 
+    MAPREDUCE-1510. RAID should regenerate parity files if they get deleted.
+    (Rodrigo Schmidt via dhruba)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
