--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -195,6 +195,9 @@ Trunk (unreleased changes)
 
     HADOOP-6579. Upgrade commons-codec library to 1.4. (omalley)
 
+    MAPREDUCE-1423. Improve performance of CombineFileInputFormat when multiple
+    pools are configured. (Dhruba Borthakur via zshao)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
