MAPREDUCE-1501. FileInputFormat supports multi-level, recursive directory listing.  (Zheng Shao via dhruba)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@918828 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -215,6 +215,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1467. Add a --verbose flag to Sqoop.
     (Aaron Kimball via tomwhite)
 
+    MAPREDUCE-1501. FileInputFormat supports multi-level, recursive 
+    directory listing.  (Zheng Shao via dhruba)
+
   BUG FIXES
 
     MAPREDUCE-1258. Fix fair scheduler event log not logging job info.
